z-index upgrade fixed

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,8 @@
     background-color: #000000;
     color: white;
     flex-direction: column;
+    position: relative;
+    z-index: 2;
  }
 
  .logo {
@@ -73,6 +75,9 @@
     position: fixed;
     justify-content: flex-end;
     display: flex;
+    right: 0;
+    width: 100%;
+    background-color: #0000005e;
 }
 
 .main-menu {
